<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/configuration_header">

        <!--EditTextPreference
            app:key="openWiki"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" -->

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="openWiki"
            app:title="@string/open_wiki" />

        <ListPreference
            app:defaultValue="true"
            app:dependency="openWiki"
            app:entries="@array/history_setting_entries"
            app:entryValues="@array/history_setting_values"
            app:key="addHistoryWhen"
            app:title="@string/add_history"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


</PreferenceScreen>
