<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="@string/configuration_header">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="openWiki"
            app:iconSpaceReserved="false"
            app:title="@string/open_wiki" />

        <ListPreference
            app:defaultValue="search"
            app:dependency="openWiki"
            app:entries="@array/history_setting_entries"
            app:entryValues="@array/history_setting_values"
            app:key="addHistoryWhen"
            app:title="@string/add_history"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Theme">

        <ListPreference
            app:defaultValue="system"
            app:entries="@array/theme_setting_entries"
            app:entryValues="@array/theme_setting_values"
            app:iconSpaceReserved="false"
            app:key="theme"
            app:title="Night Mode"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
