<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:iconSpaceReserved="false"
        app:title="Helps">
        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="tutorial"
            app:iconSpaceReserved="false"
            app:title="@string/tutorial" />

        <Preference
            app:iconSpaceReserved="false"
            app:title="Suggestions / Report Bugs">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="mailto:jennytai3221@gmail.com">
                <!--suppress AndroidElementNotAllowed -->
                <extra
                    android:name="android.intent.extra.SUBJECT"
                    android:value="Spot-A-Flower Feedback" />
            </intent>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        app:allowDividerAbove="false"
        app:iconSpaceReserved="false"
        app:title="About">
        <Preference
            app:iconSpaceReserved="false"
            app:selectable="false"
            app:summary="@string/about_detail" />

        <Preference
            app:iconSpaceReserved="false"
            app:title="Track Development">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/github_link" />
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>